@@ -1,5 +1,6 @@
 package com.nutcracker.example.demo.config.security;
 
+import com.nutcracker.example.demo.constant.DemoConstants;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -12,6 +13,7 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
 import java.util.Arrays;
 import java.util.List;
 
@@ -26,45 +28,22 @@ import java.util.List;
 @EnableWebSecurity
 public class SecurityConfig {
 
-    // 白名单路径（无需认证）
-    private static final String[] WHITE_LIST = {
-            "/public/**",
-            "/static/**",
-            "/favicon.ico",
-            "/v3/api-docs/**",
-            "/webjars/**",
-            "/swagger-ui/**",
-            "/swagger-ui.html",
-            "/swagger-resources/**",
-            "/doc.html",
-            "/rest/actuator/**",
-            "/actuator/**",
-            "/alive",
-            "/login",
-            "/error/**"
-    };
-
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
                 // 跨域配置
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 // 权限规则
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(WHITE_LIST).permitAll()  // 白名单路径直接放行
-                        .anyRequest().authenticated()             // 其他路径需认证
+                .authorizeHttpRequests(auth ->
+                        auth.requestMatchers(DemoConstants.WHITE_LIST).permitAll()
+                                .anyRequest().authenticated()             // 其他路径需认证
                 )
-
                 // 添加 JWT 过滤器
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-
         return http.build();
     }
 
@@ -72,10 +51,9 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowedOrigins(List.of("*"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
-        config.setExposedHeaders(List.of("Authorization"));
-
+        config.setExposedHeaders(List.of("*"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
